tests/valid/common/v38_common_blank_no_slash.f
program commblank
  integer alpha, beta
  common alpha, beta
  alpha = 10
  beta = 20
  print *, alpha, beta
end
