tests/invalid/variables/i05_duplicate_var.f
program dupvar
  integer x
  integer x
  x = 10
  print *, x
end
